Add DB setup changes

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,26 @@
 MinimalApi/obj/
 UserDb/obj/
 UserDb/UserDb.publish.xml
+DataAccess/obj/DataAccess.csproj.nuget.dgspec.json
+DataAccess/obj/DataAccess.csproj.nuget.g.props
+DataAccess/obj/DataAccess.csproj.nuget.g.targets
+DataAccess/obj/project.assets.json
+DataAccess/obj/project.nuget.cache
+DataAccess/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+DataAccess/obj/Debug/net6.0/DataAccess.AssemblyInfo.cs
+DataAccess/obj/Debug/net6.0/DataAccess.AssemblyInfoInputs.cache
+DataAccess/obj/Debug/net6.0/DataAccess.assets.cache
+DataAccess/obj/Debug/net6.0/DataAccess.csproj.AssemblyReference.cache
+DataAccess/obj/Debug/net6.0/DataAccess.GeneratedMSBuildEditorConfig.editorconfig
+DataAccess/obj/Debug/net6.0/DataAccess.GlobalUsings.g.cs
+UserDb/bin/Debug/DeploymentReport.txt
+UserDb/bin/Debug/DeploymentReport_1.txt
+UserDb/bin/Debug/DeploymentReport_2.txt
+UserDb/bin/Debug/UserDb.dacpac
+UserDb/bin/Debug/UserDb.dll
+UserDb/bin/Debug/UserDb.pdb
+UserDb/bin/Debug/UserDb.publish.sql
+UserDb/bin/Debug/UserDb_1.publish.sql
+UserDb/bin/Debug/UserDb_2.publish.sql
+UserDb/UserDb.dbmdl
+UserDb/UserDb.jfm
